Fix CSS in themes to use points for font sizes, not pixels.
Using physical pixels for font sizes is harmful because it leads
to unreadable interface on high DPI displays.

This change fixes this problem for all 3 themes that use CSS.

Also, maximum size of recent transactions list view in overview tab
has been removed because it was causing this list view to be
so narrow on high DPI displays that transaction amount was clashing
with transaction time if fonts are readable.

--- a/src/qt/res/css/light.css
+++ b/src/qt/res/css/light.css
@@ -70,7 +70,7 @@ background-color:#F8F6F6;
 /*******************************************************/
 
 QLabel { /* Base Text Size & Color */
-font-size:12px;
+font-size:9pt;
 color:#333333;
 }
 
@@ -85,7 +85,7 @@ background-color:transparent;
 
 .QValidatedLineEdit, .QLineEdit { /* Text Entry Fields */
 border: 1px solid #82C3E6;
-font-size:11px;
+font-size:8pt;
 min-height:25px;
 outline:0;
 padding:3px;
@@ -93,7 +93,7 @@ background-color:#fcfcfc;
 }
 
 .QLineEdit:!focus {
-font-size:12px;
+font-size:9pt;
 }
 
 .QValidatedLineEdit:disabled, .QLineEdit:disabled {
@@ -107,7 +107,7 @@ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #4ca5dc, 
 border:0;
 border-radius:3px;
 color:#ffffff;
-font-size:12px;
+font-size:9pt;
 font-weight:normal;
 height: 26px;
 padding-left:25px;
@@ -283,7 +283,7 @@ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 0.25, stop: 0 #1070B0,
 color:#fff;
 min-height:25px;
 font-weight:bold;
-font-size:11px;
+font-size:8pt;
 outline:0;
 border:0px solid #fff;
 border-right:1px solid #fff;
@@ -309,7 +309,7 @@ border:0px solid #fff;
 
 QTableView::item { /* Table Item */
 background-color:#fcfcfc;
-font-size:12px;
+font-size:9pt;
 }
 
 QTableView::item:selected { /* Table Item Selected */
@@ -515,7 +515,7 @@ padding-left:15px;
 }
 
 QDialog#SignVerifyMessageDialog QLineEdit:!focus { /* Font Hack */
-font-size:10px;
+font-size:8pt;
 }
 
 QDialog#SignVerifyMessageDialog QPushButton#copySignatureButton_SM { /* Copy Button */
@@ -623,7 +623,7 @@ border:1px solid #9e9e9e;
 }
 
 QWidget#AddressBookPage QTableView { /* Address Listing */
-font-size:12px;
+font-size:9pt;
 }
 
 QWidget#AddressBookPage QHeaderView::section { /* Min width for Windows fix */
@@ -797,13 +797,13 @@ margin-left:3px;
 
 QWidget .QFrame#frame .QLabel#labelSpendable { /* Spendable Header */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:18px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchonly { /* Watch-only Header */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:16px;
 }
 
@@ -814,14 +814,14 @@ background-color:#1c75bc;
 color:#ffffff;
 margin-right:5px;
 padding-right:5px;
-font-size:14px;
+font-size:10pt;
 font-weight: bold;
 min-height:35px;
 }
 
 QWidget .QFrame#frame .QLabel#labelBalance { /* Available Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:16px;
+font-size:12pt;
 color:#1c75bc;
 margin-left:0px;
     font-weight: bold;
@@ -829,14 +829,14 @@ margin-left:0px;
 
 QWidget .QFrame#frame .QLabel#labelWatchAvailable { /* Watch-only Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelPendingText { /* Pending Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-font-size:12px;
+font-size:9pt;
 background-color:#F8F6F6;
 margin-right:5px;
 padding-right:5px;
@@ -844,20 +844,20 @@ padding-right:5px;
 
 QWidget .QFrame#frame .QLabel#labelUnconfirmed { /* Pending Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchPending { /* Watch-only Pending Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelImmatureText { /* Immature Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-font-size:12px;
+font-size:9pt;
 background-color:#F8F6F6;
 margin-right:5px;
 padding-right:5px;
@@ -865,20 +865,20 @@ padding-right:5px;
 
 QWidget .QFrame#frame .QLabel#labelImmature { /* Immature Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchImmature { /* Watch-only Immature Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelTotalText { /* Total Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
 min-width:160px;
-font-size:12px;
+font-size:9pt;
 background-color:#F8F6F6;
 margin-right:5px;
 padding-right:5px;
@@ -886,13 +886,13 @@ padding-right:5px;
 
 QWidget .QFrame#frame .QLabel#labelTotal { /* Total Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchTotal { /* Watch-only Total Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
-font-size:12px;
+font-size:9pt;
 margin-left:16px;
 }
 
@@ -919,7 +919,7 @@ color:#fff;
 margin-right: 5px;
 padding-right: 5px;
 font-weight:bold;
-font-size:14px;
+font-size:10pt;
 min-height:35px;
 max-height:35px;
 }
@@ -1019,7 +1019,7 @@ QWidget .QFrame#framePrivateSend .QLabel#labelPrivateSendLastMessage { /* Privat
 qproperty-alignment: 'AlignVCenter | AlignCenter';
 min-width: 288px;
 min-height: 43px;
-font-size:11px;
+font-size:8pt;
 color:#818181;
 }
 
@@ -1036,7 +1036,7 @@ outline:none;
 
 QWidget .QFrame#framePrivateSend .QPushButton#togglePrivateSend { /* Start PrivateSend Mixing */
 min-height: 40px;
-font-size:15px;
+font-size:10pt;
 font-weight:normal;
 color:#ffffff;
 padding-left:10px;
@@ -1054,7 +1054,7 @@ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, 
 border:1px solid #d2d2d2;
 color:#616161;
 min-height:25px;
-font-size:9px;
+font-size:6pt;
 padding:0px;
 }
 
@@ -1072,7 +1072,7 @@ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, 
 border:1px solid #d2d2d2;
 color:#616161;
 min-height:25px;
-font-size:9px;
+font-size:6pt;
 padding:0px;
 }
 
@@ -1090,7 +1090,7 @@ background-color:qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, 
 border:1px solid #d2d2d2;
 color:#616161;
 min-height:25px;
-font-size:9px;
+font-size:6pt;
 padding:0px;
 }
 
@@ -1122,7 +1122,7 @@ margin-top:83px;
 margin-right:5px;
 padding-right:5px;
 font-weight:normal;
-font-size:15px;
+font-size:10pt;
 min-height:24px;
 }
 
@@ -1137,8 +1137,7 @@ min-height:16px;
 
 QWidget .QFrame#frame_2 QListView { /* Transaction List */
 font-weight:normal;
-font-size:12px;
-max-width:369px;
+font-size:9pt;
 margin-top:12px;
 margin-left:0px; /* CSS Voodoo - set to -66px to hide default transaction icons */
 }
@@ -1163,7 +1162,7 @@ min-height:25px;
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeatures { /* Coin Control Header */
 color:#999;
 font-weight:normal;
-font-size:14px;
+font-size:10pt;
 }
 
 QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl { /* Coin Control Inputs */
@@ -1256,7 +1255,7 @@ QDialog#SendCoinsDialog QLabel#label {
 margin-right:-2px;
 padding-right:-2px;
 color:#616161;
-font-size:14px;
+font-size:10pt;
 font-weight:bold;
 border-radius:5px;
 padding-top:20px;
@@ -1286,7 +1285,7 @@ QStackedWidget#SendCoinsEntry .QFrame#SendCoins > .QLabel { /* Send Coin Entry L
 background-color:#F8F6F6;
 min-width:102px;
 font-weight:normal;
-/*font-size:11px;*/
+/*font-size:8pt;*/
 color:#333;
 min-height:25px;
 margin-right:5px;
@@ -1476,7 +1475,7 @@ border: 1px solid #fff;
 min-width:102px;
 color:#333;
 /*font-weight:bold;
-font-size:11px;*/
+font-size:8pt;*/
 padding-right:5px;
 }
 
@@ -1486,7 +1485,7 @@ border: 1px solid #fff;
 min-width:102px;
 color:#ffffff;
 /*font-weight:bold;
-font-size:11px;*/
+font-size:8pt;*/
 padding-right:5px;
 }
 
@@ -1496,7 +1495,7 @@ border: 1px solid #fff;
 min-width:102px;
 color:#333;
 /*font-weight:bold;
-font-size:11px;*/
+font-size:8pt;*/
 padding-right:5px;
 }
 
@@ -1554,7 +1553,7 @@ border:1px solid #9e9e9e;
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Requested Payments History Label */
 color:#999;
 font-weight:normal;
-font-size:14px;
+font-size:10pt;
 }
 
 /* RECEIVE COINS DIALOG */
